fix travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: php
 php:
   - 5.4
 script: "./run.sh"
-before_script: "cd tests"
+before_script: "cd tests; composer update"
 after_script: "cd .."
